# LazyMath

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lazymath/: Angle.cpp  Angle.h  Angle.hpp  Distance.h  Distance.hpp  Float.cpp  Float.h  LazyMath.h  LazyMath.hpp  Line2d.cpp  Line2d.h  Line2d.hpp  Vector2d.cpp  Vector2d.h  Vector2d.hpp  lazymath.h  lazymath.hpp
